test/deca/syntax/invalid/ifthenelse_else_condition.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 10 : Erreur (pas de conditions après un else)

{
    if (true) {
    
    } else (false) {

    }
}